--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,27 @@
     transform: rotate(360deg);
   }
 }
+
+.card {
+  width: 300px;
+  height: 300px;
+  background-size: cover;
+}
+
+
+.flexbox .board {
+  display: inline-block;
+  
+  width: 100%;
+  max-width: 400px;
+
+
+  padding: 5px;
+}
+
+.flexbox .board .card {
+  padding: 15px 25px;
+
+  cursor: pointer;
+  margin-bottom: 15px;
+}
